// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionSheet Behavior  ActionSheet click event on ActionSheetItem 1`] = `
<div
  class="at-action-sheet"
>
  <div
    class="at-action-sheet__overlay"
  />
  <div
    class="at-action-sheet__container"
  >
    
    <div
      class="at-action-sheet__body"
    >
      
      
      <div
        class="at-action-sheet__item"
      >
        
        Button A
        
      </div>
      
      
    </div>
    <div
      class="at-action-sheet__footer"
    >
      
      
      
    </div>
  </div>
</div>
`;

exports[`ActionSheet Snap Change ActionSheet -- props isOpened 1`] = `
<div
  class="at-action-sheet at-action-sheet--active"
>
  <div
    class="at-action-sheet__overlay"
  />
  <div
    class="at-action-sheet__container"
  >
    <div
      class="at-action-sheet__header"
    >
      
      After clearing the location information, others will not be able to see you
Line breaks can be escaped
      
    </div>
    <div
      class="at-action-sheet__body"
    >
      
      
      <div
        class="at-action-sheet__item"
      >
        
        Button A
        
      </div>
      <div
        class="at-action-sheet__item"
      >
        
        Button B
        
      </div>
      
      
    </div>
    <div
      class="at-action-sheet__footer"
    >
      
      Cancel
      
    </div>
  </div>
</div>
`;

exports[`ActionSheet Snap Change ActionSheet -- props isOpened 2`] = `
<div
  class="at-action-sheet"
>
  <div
    class="at-action-sheet__overlay"
  />
  <div
    class="at-action-sheet__container"
  >
    <div
      class="at-action-sheet__header"
    >
      
      After clearing the location information, others will not be able to see you
Line breaks can be escaped
      
    </div>
    <div
      class="at-action-sheet__body"
    >
      
      
      <div
        class="at-action-sheet__item"
      >
        
        Button A
        
      </div>
      <div
        class="at-action-sheet__item"
      >
        
        Button B
        
      </div>
      
      
    </div>
    <div
      class="at-action-sheet__footer"
    >
      
      Cancel
      
    </div>
  </div>
</div>
`;

exports[`ActionSheet Snap render initial ActionSheet 1`] = `
<div
  class="at-action-sheet"
>
  <div
    class="at-action-sheet__overlay"
  />
  <div
    class="at-action-sheet__container"
  >
    
    <div
      class="at-action-sheet__body"
    >
      
      
      <div
        class="at-action-sheet__item"
      >
        
        Button A
        
      </div>
      <div
        class="at-action-sheet__item"
      >
        
        Button B
        
      </div>
      
      
    </div>
    <div
      class="at-action-sheet__footer"
    >
      
      
      
    </div>
  </div>
</div>
`;

exports[`ActionSheet Snap render opened ActionSheet -- props cancelText 1`] = `
<div
  class="at-action-sheet at-action-sheet--active"
>
  <div
    class="at-action-sheet__overlay"
  />
  <div
    class="at-action-sheet__container"
  >
    
    <div
      class="at-action-sheet__body"
    >
      
      
      <div
        class="at-action-sheet__item"
      >
        
        Button A
        
      </div>
      <div
        class="at-action-sheet__item"
      >
        
        Button B
        
      </div>
      
      
    </div>
    <div
      class="at-action-sheet__footer"
    >
      
      Cancel
      
    </div>
  </div>
</div>
`;

exports[`ActionSheet Snap render opened ActionSheet -- props completed 1`] = `
<div
  class="at-action-sheet at-action-sheet--active"
>
  <div
    class="at-action-sheet__overlay"
  />
  <div
    class="at-action-sheet__container"
  >
    <div
      class="at-action-sheet__header"
    >
      
      After clearing the location information, others will not be able to see you
Line breaks can be escaped
      
    </div>
    <div
      class="at-action-sheet__body"
    >
      
      
      <div
        class="at-action-sheet__item"
      >
        
        Button A
        
      </div>
      <div
        class="at-action-sheet__item"
      >
        
        Button B
        
      </div>
      
      
    </div>
    <div
      class="at-action-sheet__footer"
    >
      
      Cancel
      
    </div>
  </div>
</div>
`;

exports[`ActionSheet Snap render opened ActionSheet -- props title 1`] = `
<div
  class="at-action-sheet at-action-sheet--active"
>
  <div
    class="at-action-sheet__overlay"
  />
  <div
    class="at-action-sheet__container"
  >
    <div
      class="at-action-sheet__header"
    >
      
      After clearing the location information, others will not be able to see you
Line breaks can be escaped
      
    </div>
    <div
      class="at-action-sheet__body"
    >
      
      
      <div
        class="at-action-sheet__item"
      >
        
        Button A
        
      </div>
      <div
        class="at-action-sheet__item"
      >
        
        Button B
        
      </div>
      
      
    </div>
    <div
      class="at-action-sheet__footer"
    >
      
      
      
    </div>
  </div>
</div>
`;

exports[`ActionSheet Snap render opened ActionSheet 1`] = `
<div
  class="at-action-sheet at-action-sheet--active"
>
  <div
    class="at-action-sheet__overlay"
  />
  <div
    class="at-action-sheet__container"
  >
    
    <div
      class="at-action-sheet__body"
    >
      
      
      <div
        class="at-action-sheet__item"
      >
        
        Button A
        
      </div>
      <div
        class="at-action-sheet__item"
      >
        
        Button B
        
      </div>
      
      
    </div>
    <div
      class="at-action-sheet__footer"
    >
      
      
      
    </div>
  </div>
</div>
`;
